# mikado.v4

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
broker/: CMakelists.txt
broker/include/: broker.h
broker/include/broker/: app.h  appId.h  appInstanceId.h  appManager.h  gui.h  handler.h  testConnect.h
broker/include/handler/: handler.h
broker/src/: app.cpp  appManager.cpp  broker.cpp  globals.cpp  gui.cpp  handler.cpp  testConnect.cpp
cfg/: CMakeLists.txt
cfg/response/: broker.cfg  globber.cfg  makeMore.cfg  storage.cfg  torchBox.cfg
cmake/: common-all.cmake  common-exe.cmake  common-lib.cmake  debugZI.cmake  dumpVariables.cmake  footer.cmake  gui.cmake  header.cmake  ixwebsocket.cmake  torch-headers.cmake  torch-libraries.cmake  torchure.cmake
common/: CMakelists.txt
common/include/: common.h
common/include/common/: algorithms.h  ascii.h  brokerConnection.h  configure.h  errorCodes.h  fyi.h  globals.h  logger.h  options.h  program_options.h  smart_enums.h  testConnect.h  using.h
common/src/: algorithms.cpp  ascii.cpp  brokerConnection.cpp  configure.cpp  globals.cpp  logger.cpp  program_options.cpp  smart_enums.cpp  testConnect.cpp
globber/: CMakelists.txt
globber/include/: globber.h
globber/src/: globber.cpp  main.cpp
imgui/: CMakelists.txt
imgui/include/: imgui.h
imgui/include/imgui/: guiBase.h
imgui/src/: guiBase.cpp
imgui/src/imgui/: imgui_draw.cpp  imgui_impl_dx9.cpp  imgui_impl_win32.cpp
include/: windows-hack.h
makeMore/: CMakelists.txt
makeMore/include/: makeMore.h
makeMore/src/: makeMore.cpp
storage/: CMakelists.txt
storage/include/: storage.h
storage/src/: storage.cpp
torchBox/: CMakelists.txt
torchBox/displaySamples/: display_samples.cmd  display_samples.py
torchBox/include/: torchBox.h
torchBox/include/torchBox/: dcganGeneratorImpl.h  netBase.h  netMakeMore.h  netMnistDCGAN.h  netMulMat.h  pytorch.h  subsetEnum.h  testBase.h  testMakeMore.h  testMulMat.h  torch-enums.h  torchBase.h
torchBox/src/: dcganGeneratorImpl.cpp  netBase.cpp  netMakeMore.cpp  netMnistDCGAN.cpp  netMulMat.cpp  pytorch.cpp  testBase.cpp  testMakeMore.cpp  testMulMat.cpp  torchBox.cpp
windowsApi/: CMakelists.txt
windowsApi/include/: windowsApi.h
windowsApi/include/windowsApi/: fileMonitor.h  globals.h  handle.h  pipe.h  process.h  stackTrace.h  windowsFileMonitor.h  windowsGlobals.h  windowsHandle.h  windowsPipe.h  windowsProcess.h
windowsApi/src/: fileMonitor.cpp  globals.cpp  handle.cpp  pipe.cpp  process.cpp  stackTrace.cpp  windowsFileMonitor.cpp  windowsGlobals.cpp  windowsHandle.cpp  windowsPipe.cpp  windowsProcess.cpp
